# HW06-Dual-AI-agent-race-via-MCP-servers

./: .env-example  .gitignore  README.md  main.py  pipeline.py  pyproject.toml
assets/: replay_template.html
config/: config.json
docs/: PLAN.md  PRD.md  TODO.md
notebooks/: analysis.ipynb
results/: cost_report.json  email_log.txt  game_report.json  q_table_trained.npy  replay.html  training_log.jsonl  transcript.jsonl
src/cop_thief/sdk/: sdk.py
src/cop_thief/services/: cop_mcp_server.py  corner_planner.py  cost_tracker.py  entities.py  game_runner.py  game_state.py  gmail_reporter.py  grid.py  html_replay.py  html_template.py  manhattan.py  move_validator.py  orchestrator.py  partial_observer.py  q_table.py  report_generator.py  reward.py  score_manager.py  sweep_planner.py  thief_mcp_server.py  training_engine.py  transcript.py  turn_executor.py  wall_builder.py
src/cop_thief/shared/: api_gatekeeper.py  config_loader.py  llm_client.py  prompt_builder.py  secrets_manager.py
tests/unit/: test_config_loader.py  test_cost_tracker.py  test_game_engine.py  test_gmail_reporter.py  test_html_replay.py  test_llm_client.py  test_mcp_servers.py  test_orchestrator.py  test_partial_observer.py  test_report_generator.py  test_secrets_manager.py  test_strategy.py  test_training_engine.py  test_transcript.py  test_turn_executor.py
